<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/s"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DF3F3"
    android:backgroundTint="#B8F4F6"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="#000000">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Add" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:layout_width="373dp"
        android:layout_height="430dp"
        android:layout_gravity="center"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:id="@+id/listOfViews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/AppTitle"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/search"
        android:layout_width="305dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:background="@drawable/bg_white_rounded"
        android:ems="10"
        android:hint="@string/hintsearch"
        android:inputType="text"
        tools:ignore="SpeakableTextPresentCheck" />

</FrameLayout>